...
    <string name="folder_icon_security">Security</string>
    <string name="folder_icon_science">Science</string>
    <string name="folder_icon_language">Language</string>
    <string name="folder_icon_flag">Flag</string>
    <string name="folder_drawer_locked">Drawer locked</string>
    <string name="folder_drawer_unlocked">Reordering enabled</string>
    <string name="folder_drawer_unlock">Unlock drawer</string>
    <string name="folder_drawer_lock">Lock drawer</string>
    <string name="folder_drag_handle">Move folder %1$s</string>
    <string name="folder_drag_hint">Hold a handle, then drag.</string>
</resources>

